<resources>
    <string name="app_name">MLUSSIS</string>
    <string name="empMenuItem1_value">Create Requisition</string>
    <string name="empMenuItem2_value">View Disbursement</string>
    <string name="empMenuItem3_value">Logout</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deptRep_pin">Pin:</string>
    <string name="catalogue">Stationery Catalogue</string>
    <string name="search">Search...</string>
    <string name="button_clear">Clear</string>
    <string name="catalogue_category">Cat.</string>
    <string name="catalogue_description">Description</string>
    <string name="catalogue_uom">U.O.M.</string>
    <string name="additem">Adding Item</string>
    <string name="button_additem">Add Item</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_enterDesiredQty">Enter Desired Quantity:</string>
    <string name="text_pendingrep_empname">Employee Name: %1$s</string>
    <string name="text_pendingrep_reqno">Requisition No.: %1$s</string>

    <!-- StoreClerk Menu -->
    <string name="scMenuItem1">Inventory</string>
    <string name="scMenuItem2">Retrieval</string>
    <string name="scMenuItem3">Disbursement</string>

    <!-- InventoryActivity Usage -->
    <string name="reqToRaise">Requisition to Raise</string>
    <string name="button_submitReq">Submit</string>
    <string name="button_reject">Reject</string>
    <string name="text_PendingRequisition">Pending Stationery Requisitions</string>
    <string-array name="category_items">
        <item>All items</item>
        <item>Clip</item>
        <item>Envelope</item>
        <item>Eraser</item>
        <item>Exercise</item>
        <item>File</item>
        <item>Pad</item>
        <item>Paper</item>
        <item>Pen</item>
        <item>Puncher</item>
        <item>Ruler</item>
        <item>Scissors</item>
        <item>Sharpener</item>
        <item>Shorthand</item>
        <item>Stapler</item>
        <item>Tacks</item>
        <item>Tape</item>
        <item>Transparency</item>
        <item>Tray</item>
    </string-array>
    <string-array name="binNo">
        <item>All Bins</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- StockCard Usage -->
    <string name="itemCode">Item Code</string>
    <string name="itemBin">Bin#</string>
    <string name="itemSupp1">Supplier 1</string>
    <string name="itemSupp2">Supplier 2</string>
    <string name="itemSupp3">Supplier 3</string>
    <string name="itemStockEdit">Edit Stock</string>
    <string name="itemTxnView">View Full History</string>
    <string name="itemCurrentStock">Current Stock</string>
    <string name="itemAdjustedStock">Adjusted Stock</string>
    <string name="adjReasonInput">Insert Adjustment Reason</string>

    <!-- StoreClerk Disbursement Usage -->
    <string name="disburseConfirmQuantity">CONFIRM QUANTITY</string>
    <string name="hint_remarks_pendingreq">Enter Remarks here...(under 300 char)</string>
    <string name="button_approve">Approve</string>
    <string-array name="disburseDept">
        <item>Registrar</item>
        <item>English</item>
        <item>Computer Science</item>
        <item>Commerce</item>
        <item>Zoology</item>
    </string-array>
    <string name="enterPinReq">Enter PIN:</string>
    <string name="scEnterpin">PIN</string>
    <string name="Logout">Logout</string>
    <string name="ManagePendingReq">Manage Pending Req.</string>
    <string name="ImageCredit">https://thenounproject.com/icon/625993/</string>
    <!-- DisplayRetUsage -->
    <string name="action_setting">Setting</string>
    <string-array name="RetDate">
        <item>Select Date</item>
        <item>2017-01-12</item>
        <item>2017-01-19</item>
    </string-array>
</resources>
