<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listframe_employee_catalogue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logicuniv.mlussis.Employee.Catalogue_Employee_ListFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:id="@+id/table_catalogue_employee"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/catalogue_category"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_catalogue_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/catalogue_description"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_catalogue_uom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/catalogue_uom"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</FrameLayout>
