<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logicuniv.mlussis.StoreClerk.StoreClerk_StockCardActivity">


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/itemNoRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/itemCode"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/itemDescRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/catalogue_description"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/itemBinNoRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/itemBin"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/itemCurrentQtyRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/itemQuantity"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemCurrentQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/itemUOM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/catalogue_uom"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemUOM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/itemSupp1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/itemSupp1"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemSupp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:id="@+id/itemSupp2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/itemSupp2"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemSupp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />

        </TableRow>

        <TableRow
            android:id="@+id/itemSupp3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:text="@string/itemSupp3"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewItemSupp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingVertical="5dp"
                android:textSize="16dp" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/itemStockEditbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_selector"
        android:paddingHorizontal="8dp"
        android:text="@string/itemStockEdit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/itemTxnViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_selector"
        android:paddingHorizontal="8dp"
        android:text="@string/itemTxnView"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.39" />
</android.support.constraint.ConstraintLayout>
