<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logicuniv.mlussis.StoreClerk.StoreClerk_EditStockQtyActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="195dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_span="2"
            android:padding="10dp">

            <TextView
                android:id="@+id/textStockCardItemCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_span="2"
            android:padding="10dp">

            <TextView
                android:id="@+id/textStockCardItemDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="115dp"
                android:layout_height="20dp"
                android:text="@string/itemCurrentStock"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textStockCardItemCurrentQty"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="115dp"
                android:layout_height="20dp"
                android:text="@string/itemAdjustedStock"
                android:textSize="16dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editTextAdjReason"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox_adjreason"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/adjReasonInput"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="5"
        android:maxLines="5"
        android:padding="10dp"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.06999999" />

    <Button
        android:id="@+id/itemAdjSubmitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_submitReq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdjReason"
        app:layout_constraintVertical_bias="0.13999999" />
</android.support.constraint.ConstraintLayout>
